autotoolize doc folder
A man page is installed and doxygen html documentation is generated, but
not installed.

--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
 iniParser installation instructions
 -----------------------------------
 
-- Run autoreconf -i
+- Run autoreconf -f -i
 - Follow the autotools instructions below to build the library
 - Type 'test/iniexample' to launch the test program.
 - Type 'test/parse' to launch torture tests.
